Implement stream.seek (#415)
This implements seek functionality, so you can change positions of a
consumer group in a topic (in stream).

There's two ways to seek

```
{
    "position": "earliest" | "latest"
    // XOR
    "offset": 1
}
```

`position` based seeking works on both a parent topic (eg
`topic="my-topic"`), and on a per-partition level (eg
`topic="my-topic~5"`). `offset` based seeking only works per partition,
for obvious reasons.
